--- a/style.css
+++ b/style.css
@@ -46,8 +46,17 @@ a {
 }
 
 ul {
-  list-style: none;
   padding-left: 0;
+}
+li {
+  list-style: none;
+}
+
+button {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  outline: none;
 }
 
 /* Typography */
@@ -106,4 +115,32 @@ p {
 .navbar__menu__item:hover {
   border: 1px solid var(--color-white);
   background-color: var(--color-dark-pink);
+}
+
+/* Home */
+.home {
+  background: url(imgs/home-background.png) center/cover no-repeat;
+  padding: 40px;
+  text-align: center;
+}
+.home__avatar {
+  width: 250px;
+  height: 250px;
+  object-fit: cover;
+  object-position: 0 30%;
+  border-radius: 50%;
+  border: 2px solid var(--color-light-white);
+}
+.home__title,
+.home__description {
+  color: var(--color-white);
+}
+.home__contact {
+  color: var(--color-white);
+  margin: 24px;
+  font-size: var(--font-regular);
+  font-weight: var(--weight-regular);
+  padding: 8px 12px;
+  border: 2px solid var(--color-white);
+  border-radius: var(--size-border-radious);
 }
