--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ h1 {
 }
 
 h2 {
-  font-size: var(--font-regular);
+  font-size: var(--font-medium);
   font-weight: var(--weight-semi-bold);
   color: var(--color-black);
   margin: 8px 0;
@@ -367,6 +367,7 @@ p {
 .testimonial {
   display: flex;
   margin: 32px;
+  align-items: center;
 }
 .testimonial__avatar {
   width: 150px;
@@ -383,6 +384,9 @@ p {
   background-color: var(--color-white);
   padding: 18px;
   border-radius: var(--size-border-radious);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .testimonial__speechBubble a {
@@ -390,4 +394,31 @@ p {
 }
 .testimonial__speechBubble p {
   color: var(--color-light-gray);
+}
+
+/* Contact */
+#contact {
+  background-color: var(--color-pink);
+}
+
+.contact__title,
+.contact__email,
+.contact__rights {
+  color: var(--color-white);
+}
+
+.contact__title {
+  margin: 32px 0;
+}
+
+.contact__links {
+  font-size: var(--font-large);
+  margin: 24px 0;
+}
+.contact__links i {
+  transition: all var(--animation-duration) ease-in;
+}
+.contact__links i:hover {
+  transform: scale(1.1);
+  color: var(--color-yelow);
 }
