--- a/style.css
+++ b/style.css
@@ -95,12 +95,20 @@ p {
 /* Navbar */
 #navbar {
   display: flex;
+  position: fixed;
+  width: 100%;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--color-pink);
+  background-color: transparent;
   color: var(--color-white);
   padding: 16px;
+  transition: all var(--animation-duration) ease-in-out;
 }
+#navbar.navbar--dark {
+  background-color: var(--color-pink);
+  padding: 8px;
+}
+
 .navbar__logo img {
   width: 20px;
   height: 20px;
@@ -133,6 +141,7 @@ p {
 .home {
   background: url(imgs/home-background.png) center/cover no-repeat;
   padding: 40px;
+  padding-top: 120px;
   text-align: center;
 }
 .home__avatar {
