--- a/style.css
+++ b/style.css
@@ -1,3 +1,144 @@
+/* Global */
 :root {
-    
+    /* Color */
+    --color-pink: #fe918d;
+    --color-white: #ffffff;
+    --color-light-white: #eeeeee;
+    --color-dark-white: #bdbdbd;
+    --color-dark-pink: #ff6863;
+    --color-dark-grey: #4d4d4d;
+    --color-grey: #616161;
+    --color-light-grey: #7c7979;
+    --color-blue: #73aace;
+    --color-yellow: #fff7d1;
+    --color-orange: #feb546;
+    --color-black: #000000;
+
+    /* Font size */
+    --font-large: 48px;
+    --font-medium: 28px;
+    --font-regular: 18px;
+    --font-small: 16px;
+    --font-micro: 14px;
+
+    /* Font weight */
+    --weight-bold: 700;
+    --weight-semi-bold: 600;
+    --weight-regular: 400;
+
+    /* Size */
+    --size-border-radius: 4px;
+
+}
+
+/* Universal tags */
+* {
+    box-sizing: border-box;
+}
+a {
+    text-decoration: none;
+    color: var(--color-white);
+}
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+body {
+    margin: 0;
+    cursor: default;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/* Typography */
+h1 {
+    font-size: var(--font-large);
+    font-weight: var(--weight-bold);
+    margin: 16px 0px;
+}
+h2 {
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+    margin: 8px 0px;
+}
+h3 {
+    font-size: var(--font-regular);
+    font-weight: var(--weight-regular);
+    margin: 8px 0px;
+}
+p {
+    font-size: var(--font-regular);
+    font-weight: var(--weight-regular);
+    color: var(--color-black);
+    margin: 4px 0px;
+}
+
+/* Navbar */
+#navbar {
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--color-pink);
+    color: var(--color-white);
+    padding: 16px;
+}
+.navbar__menu {
+    display: flex;
+}
+.navbar__logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: var(--font-medium);
+    font-weight: var(--weight-semi-bold);
+}
+.navbar__logo img {
+    height: 25px;
+    margin-right: 8px;
+}
+.navbar__menu__item {
+    margin: 0px 4px;
+    padding: 8px 12px;
+    font-size: var(--font-regular);
+    border: 1px solid transparent;
+    border-radius: 10px;
+    cursor: pointer;
+    border-radius: var(--size-border-radius);
+}
+.navbar__menu__item:hover {
+    border: 1px solid var(--color-white);
+    background-color: var(--color-dark-pink);
+    color: var(--color-white);
+}
+.active {
+    border: 1px solid var(--color-white);
+}
+
+/* Home */
+#home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: no-repeat url(imgs/home-background.png) center/cover;
+    color: var(--color-white);
+    text-align: center;
+    padding: 40px;
+}
+.home__avatar{
+    border-radius: 50%;
+    height: 250px;
+    width: 250px;
+    border: 2px solid var(--color-light-white);
+}
+.title {
+    font-size: var(--font-large);
+}
+.home__contact {
+    background-color: transparent;
+    color: var(--color-white);
+    border-radius: var(--size-border-radius);
+    font-size: var(--font-medium);
+    border: 1px solid var(--color-white);
+    padding: 8px;
+}
+.home__contact:hover {
+    background-color: var(--color-black);
 }
