--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@
     /* Size */
     --size-border-radius: 4px;
 
+    /* Animation */
+    --animation-duration: 300ms;
+
 }
 
 /* Universal tags */
@@ -47,6 +50,12 @@ body {
     margin: 0;
     cursor: default;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+button {
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    outline: none;
 }
 
 /* Typography */
@@ -108,7 +117,7 @@ p {
     background-color: var(--color-dark-pink);
     color: var(--color-white);
 }
-.active {
+.navbar__menu__item.active {
     border: 1px solid var(--color-white);
 }
 
@@ -128,17 +137,284 @@ p {
     width: 250px;
     border: 2px solid var(--color-light-white);
 }
-.title {
-    font-size: var(--font-large);
+.home__title, .home__description {
+    -webkit-text-stroke: 0.5px var(--color-light-grey);
 }
 .home__contact {
-    background-color: transparent;
     color: var(--color-white);
     border-radius: var(--size-border-radius);
-    font-size: var(--font-medium);
+    font-size: var(--font-regular);
+    font-weight: var(--weight-bold);
     border: 1px solid var(--color-white);
-    padding: 8px;
+    padding: 8px 12px;
+    margin: 24px;
+    border: 2px solid var(--color-white);
 }
 .home__contact:hover {
     background-color: var(--color-black);
 }
+
+/* Section common */
+.section {
+    padding: 50px;
+    text-align: center;
+    margin: auto;
+}
+.section__container {
+    max-width: 1200px;
+    margin: auto;
+}
+
+/* About */
+#about {
+}
+.about__stacks {
+    display: flex;
+    justify-content: space-between;
+    margin: 80px 0;
+}
+.stack__icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 170px;
+    width: 170px;
+    font-size: 70px;
+    color: var(--color-blue);
+    border: 1px solid var(--color-blue);
+    border-radius: 50%;
+    margin: auto;
+    margin-bottom: 16px;
+    transition: color var(--animation-duration) ease;
+}
+.stack__title, .stack__description {
+    color: var(--color-dark-grey);
+}
+.stack__description {
+    font-size: var(--font-small);
+}
+.stack__icon i {
+    transition: all var(--animation-duration) ease;
+}
+.stack__icon:hover i{
+    color: var(--color-pink);
+    transform: scale(1.2) rotate(30deg);
+    
+}
+.stack__icon:hover {
+    border-color: var(--color-pink);
+}
+.school {
+    display: flex;
+    align-items: center;
+}
+.school__description {
+    margin: 0 16px;
+    text-align: left;
+}
+.school__name, .school__period {
+    color: var(--color-light-grey);
+}
+.school__name {
+    font-size: var(--font-small);
+}
+.school__period {
+    font-size: var(--font-micro);
+}
+.school img {
+    height: 60px;
+}
+
+/* Skills */
+#skills {
+    background-color: var(--color-yellow);
+}
+.skillset {
+    display: flex;
+    color: var(--color-light-white);
+    margin: 20px 0;
+    background-color: var(--color-light-grey);
+}
+.skillset__title {
+    color: var(--color-white);
+}
+.skillset__left {
+    background-color: var(--color-dark-grey);
+    flex-basis: 60%;
+    padding: 20px 40px;
+}
+.skill {
+    margin-bottom: 32px;
+}
+.skill__description {
+    display: flex;
+    justify-content: space-between;
+}
+.skill__guage {
+    background-color: var(--color-grey);
+    height: 3px;
+    width: 100%;
+}
+.skill__value {
+    background-color: var(--color-orange);
+    height: 3px;
+}
+.skillset__right {
+    flex-basis: 40%;
+}
+.tools {
+    background-color: var(--color-grey);
+}
+.etc {
+    background-color: var(--color-light-grey);
+}
+.tools, .etc {
+    padding: 20px;
+}
+
+/* Work */
+.work__categories {
+    margin: 40px;
+}
+.category__btn {
+    padding: 8px 48px;
+    border: 1px solid var(--color-dark-white);
+    border-radius: var(--size-border-radius);
+    font-size: var(--font-regular);
+}
+.category__btn.active, .category__btn:hover {
+    background-color: var(--color-dark-pink);
+    color: var(--color-white);    
+}
+.category__btn.active .category__count, .category__btn:hover .category__count {
+    opacity: 1;
+    top: 0;
+}
+.category__count {
+    background-color: var(--color-orange);
+    border-radius: 50%;
+    color: var(--color-white);
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    line-height: 24px;
+    position: relative;
+    top: -20px;
+    left: 8px;
+    opacity: 0;
+    transition: all var(--animation-duration) ease-in;
+}
+.work__projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.project {
+    width: 280px;
+    height: 250px;
+    margin: 2px;
+    position: relative;
+    background-color: var(--color-light-white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.project__img {
+    max-width: 100%;
+    max-height: 100%;
+}
+.project__description {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: var(--color-black);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: all var(--animation-duration) ease-in;
+}
+.project__description h3::after {
+    content: "";
+    display: block;
+    width: 25px;
+    height: 2px;
+    background-color: var(--color-dark-white);
+    margin-top: 8px;
+    position: relative;
+    left: 50%;
+    margin-left: -12px;
+}
+.project:hover .project__description {
+    opacity: 0.8;
+    transform: translateY(0px);
+}
+
+/* Testimonial */
+#testimonials {
+    background-color: var(--color-light-white);
+}
+.testimonial__box {
+    margin: 40px;
+}
+.testimonial {
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+    margin: 32px 0;
+}
+.testimonial__avatar {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+.testimonial__avatar:nth-child(odd) {
+    margin-right: 40px;
+}
+.testimonial__avatar:nth-child(even) {
+    margin-left: 40px;
+}
+.name a{
+    color: var(--color-pink);
+}
+.testimonial__speechBubble p {
+    color: var(--color-light-grey);
+}
+.testimonial__speechBubble {
+    padding: 18px;
+    background-color: var(--color-white);
+    border-radius: var(--size-border-radius);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Contact */
+#contact {
+    background-color: var(--color-pink);
+    color: var(--color-white);
+}
+.contact__title {
+    margin: 32px 0px;
+}
+.contact__links {
+    font-size: var(--font-large);
+    margin: 24px 0;
+}
+.contact__links i {
+    margin: 8px;
+    transition: all var(--animation-duration) ease-in;
+}
+.contact__links i:hover {
+    transform: scale(1.1);
+    color: var(--color-yellow);
+}
+.contact__rights {
+    color: var(--color-white);
+}
+
+/* For below 768px screen width */
