--- a/style.css
+++ b/style.css
@@ -120,6 +120,14 @@ p {
 .navbar__menu__item.active {
     border: 1px solid var(--color-white);
 }
+.navbar__toggle__btn {
+    position: absolute;
+    right: 32px;
+    top: 24px;
+    font-size: 24px;
+    color: var(--color-white);
+    display: none;
+}
 
 /* Home */
 #home {
@@ -166,8 +174,6 @@ p {
 }
 
 /* About */
-#about {
-}
 .about__stacks {
     display: flex;
     justify-content: space-between;
@@ -418,3 +424,34 @@ p {
 }
 
 /* For below 768px screen width */
+@media screen and (max-width: 768px) {
+    .navbar__toggle__btn {  
+      display: block; 
+    }
+    #navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .navbar__menu {
+        flex-direction: column;
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+    .about__stacks {
+        flex-direction: column;
+    }
+    .stack {
+        margin-bottom: 38px;
+    }
+    .skillset {
+        flex-direction: column;
+    }
+    .project {
+        flex-grow: 1;
+    }
+    .testimonial__avatar {
+        width: 80px;
+        height: 80px;
+    }
+}
